k8s_examples_bak/clustered-pingfederate/ping-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: samirgandhi
  name: samirgandhi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:574076504146:certificate/4668c375-5399-4eca-80ba-dea86268d1cf
  labels:
    app: samirgandhi
    role: pingaccess
  name: pingaccess
  namespace: samirgandhi
spec:
  ports:
  - name: pa-console
    port: 9000
  - name: pa-engine
    port: 443
    targetPort: 3000
  selector:
    app: samirgandhi
    role: pingaccess
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:574076504146:certificate/4668c375-5399-4eca-80ba-dea86268d1cf
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app: samirgandhi
    role: pingdataconsole
  name: pingdataconsole-service
  namespace: samirgandhi
spec:
  ports:
  - name: https
    port: 443
  selector:
    app: samirgandhi
    role: pingdataconsole
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:574076504146:certificate/4668c375-5399-4eca-80ba-dea86268d1cf
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    app: samirgandhi
    role: pingdirectory
  name: pingdirectory
  namespace: samirgandhi
spec:
  clusterIP: None
  ports:
  - name: ldap
    port: 389
  - name: ldaps
    port: 636
  selector:
    app: samirgandhi
    role: pingdirectory
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-2:574076504146:certificate/4668c375-5399-4eca-80ba-dea86268d1cf
  labels:
    app: samirgandhi
    role: pingfederate
  name: pingfederate
  namespace: samirgandhi
spec:
  ports:
  - name: pf-console
    port: 9999
  - name: pf-engine
    port: 443
    targetPort: 9031
  selector:
    app: samirgandhi
    role: pingfederate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: samirgandhi
    role: pingaccess
  name: pingaccess
  namespace: samirgandhi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samirgandhi
      role: pingaccess
  template:
    metadata:
      labels:
        app: samirgandhi
        role: pingaccess
      name: pingaccess
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingaccess-environment-variables-9c5dhm8h2g
        image: pingidentity/pingaccess:5.2.3-edge
        name: pingaccess
        ports:
        - containerPort: 9000
          name: pa-console
        - containerPort: 3000
          name: pa-engine
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: samirgandhi
    role: pingdataconsole
  name: pingdataconsole
  namespace: samirgandhi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samirgandhi
      role: pingdataconsole
  template:
    metadata:
      labels:
        app: samirgandhi
        role: pingdataconsole
      name: pingdataconsole
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingdataconsole-environment-variables-d6dgmc7dt4
        image: pingidentity/pingdataconsole:edge
        name: pingdataconsole
        ports:
        - containerPort: 443
          name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: samirgandhi
    role: pingfederate
  name: pingfederate
  namespace: samirgandhi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samirgandhi
      role: pingfederate
  template:
    metadata:
      labels:
        app: samirgandhi
        role: pingfederate
      name: pingfederate
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingfederate-environment-variables-2ggd8kkt4d
        image: pingidentity/pingfederate:9.3.0-edge
        name: pingfederate
        ports:
        - containerPort: 9999
          name: pf-console
        - containerPort: 9031
          name: oauthplayground
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: samirgandhi
    role: pingdirectory
  name: ds
  namespace: samirgandhi
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: samirgandhi
      role: pingdirectory
  serviceName: pingdirectory
  template:
    metadata:
      annotations:
        lastUpdateTime: NA
      labels:
        app: samirgandhi
        role: pingdirectory
    spec:
      containers:
      - env:
        - name: K8S_STATEFUL_SET_NAME
          value: ds
        - name: K8S_STATEFUL_SET_SERVICE_NAME
          value: pingdirectory
        - name: MAX_HEAP_SIZE
          value: 6g
        image: pingidentity/pingdirectory:edge
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/hooks/90-shutdown-sequence.sh
        livenessProbe:
          exec:
            command:
            - liveness.sh
          failureThreshold: 10
          initialDelaySeconds: 600
          periodSeconds: 30
        name: ds
        ports:
        - containerPort: 389
          name: ldap
        - containerPort: 636
          name: ldaps
        readinessProbe:
          exec:
            command:
            - liveness.sh
          failureThreshold: 120
          periodSeconds: 30
        resources:
          limits:
            cpu: "1"
            memory: 8Gi
          requests:
            cpu: "1"
            memory: 8Gi
        volumeMounts:
        - mountPath: /opt/out
          name: out-dir
        - mountPath: /usr/local/secrets
          name: passwords
          readOnly: true
      terminationGracePeriodSeconds: 300
      volumes:
      - name: passwords
        secret:
          defaultMode: 256
          secretName: passwords
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      labels:
        app: samirgandhi
        role: pingdirectory
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 20Gi
      storageClassName: pingdirectory-gp2
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 75.80.23.87/32, 103.15.250.10/32,
      67.174.252.139/32, 71.148.12.8/32, 103.15.250.0/24, 12.157.155.0/24, 12.179.132.0/22,
      64.34.20.0/24, 65.162.137.0/24, 70.119.97.223/32, 173.240.160.0/21, 0.0.0.0/0
  labels:
    app: samirgandhi
    role: pingaccess
  name: pingaccess-ingress
  namespace: samirgandhi
spec:
  rules:
  - host: access.samir-test.ping-devops-program.com
    http:
      paths:
      - backend:
          serviceName: pingaccess
          servicePort: 3000
        path: /
  - host: accessconsole.samir-test.ping-devops-program.com
    http:
      paths:
      - backend:
          serviceName: pingaccess
          servicePort: 9000
        path: /
  tls:
  - hosts:
    - access.samir-test.ping-devops-program.com
    - accessconsole.samir-test.ping-devops-program.com
    secretName: tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 75.80.23.87/32, 103.15.250.10/32,
      67.174.252.139/32, 71.148.12.8/32, 103.15.250.0/24, 12.157.155.0/24, 12.179.132.0/22,
      64.34.20.0/24, 65.162.137.0/24, 70.119.97.223/32, 173.240.160.0/21, 0.0.0.0/0
  labels:
    app: samirgandhi
    role: pingdataconsole
  name: pingdataconsole-ingress
  namespace: samirgandhi
spec:
  rules:
  - host: dataconsole.samir-test.ping-devops-program.com
    http:
      paths:
      - backend:
          serviceName: pingdataconsole-service
          servicePort: 443
        path: /console
  tls:
  - hosts:
    - dataconsole.samir-test.ping-devops-program.com
    secretName: tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 75.80.23.87/32, 103.15.250.10/32,
      67.174.252.139/32, 71.148.12.8/32, 103.15.250.0/24, 12.157.155.0/24, 12.179.132.0/22,
      64.34.20.0/24, 65.162.137.0/24, 70.119.97.223/32, 173.240.160.0/21, 0.0.0.0/0
  labels:
    app: samirgandhi
    role: pingfederate
  name: pingfederate-ingress
  namespace: samirgandhi
spec:
  rules:
  - host: federate.samir-test.ping-devops-program.com
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 9999
        path: /pingfederate
      - backend:
          serviceName: pingfederate
          servicePort: 443
        path: /OAuthPlayground
      - backend:
          serviceName: pingfederate
          servicePort: 443
        path: /
  tls:
  - hosts:
    - federate.samir-test.ping-devops-program.com
    secretName: tls-secret
